<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/system">
        <Preference
            android:key="OPEN_WALLPAPER_SETTINGS"
            android:title="@string/wallpaper_and_styles" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/layout_positioning">
        <SeekBarPreference
            android:key="TEXT_PADDING_SIZE"
            android:title="@string/app_padding_size"
            app:showSeekBarValue="true"
            android:defaultValue="30"
            app:min="0" android:max="50" />

        <SwitchPreferenceCompat
            android:key="HOME_CLICK_AREA"
            android:title="@string/extend_home_apps_area" />

        <SwitchPreferenceCompat
            android:key="HOME_ALIGNMENT_BOTTOM"
            android:title="@string/alignment_to_bottom" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/visibility_display">
        <SwitchPreferenceCompat
            android:key="STATUS_BAR"
            android:title="@string/show_status_bar" />

        <SwitchPreferenceCompat
            android:key="NAVIGATION_BAR"
            android:title="@string/show_navigation_bar" />

        <SwitchPreferenceCompat
            android:key="RECENT_APPS_DISPLAYED"
            android:title="@string/show_recent_apps" />

        <SeekBarPreference
            android:key="RECENT_COUNTER"
            android:title="@string/number_of_recents"
            app:showSeekBarValue="true"
            app:min="1" android:max="35"
            android:dependency="RECENT_APPS_DISPLAYED" />

        <SwitchPreferenceCompat
            android:key="APP_USAGE_STATS"
            android:title="@string/show_app_usage_stats" />

        <SwitchPreferenceCompat
            android:key="SHOW_BACKGROUND"
            android:title="@string/show_background" />

        <SeekBarPreference
            android:key="APP_OPACITY"
            android:title="@string/background_opacity"
            app:showSeekBarValue="true"
            app:min="0" android:max="100" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/element_alignment">
        <ListPreference
            android:key="CLOCK_ALIGNMENT"
            android:title="@string/clock_alignment"
            android:entries="@array/alignment_names"
            android:entryValues="@array/alignment_values" />

        <ListPreference
            android:key="DATE_ALIGNMENT"
            android:title="@string/date_alignment"
            android:entries="@array/alignment_names"
            android:entryValues="@array/alignment_values" />

        <ListPreference
            android:key="ALARM_ALIGNMENT"
            android:title="@string/alarm_alignment"
            android:entries="@array/alignment_names"
            android:entryValues="@array/alignment_values" />

        <ListPreference
            android:key="HOME_ALIGNMENT"
            android:title="@string/home_alignment"
            android:entries="@array/alignment_names"
            android:entryValues="@array/alignment_values" />

        <ListPreference
            android:key="DRAWER_ALIGNMENT"
            android:title="@string/drawer_alignment"
            android:entries="@array/alignment_names"
            android:entryValues="@array/alignment_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/element_colors">
        <Preference
            android:key="BACKGROUND_COLOR"
            android:title="@string/background_color" />

        <Preference
            android:key="APP_COLOR"
            android:title="@string/app_color" />

        <Preference
            android:key="DATE_COLOR"
            android:title="@string/date_color" />

        <Preference
            android:key="CLOCK_COLOR"
            android:title="@string/clock_color" />

        <Preference
            android:key="ALARM_CLOCK_COLOR"
            android:title="@string/alarm_color" />

        <Preference
            android:key="BATTERY_COLOR"
            android:title="@string/battery_color" />

        <SwitchPreferenceCompat
            android:key="ICON_RAINBOW_COLORS"
            android:title="@string/rainbow_shortcuts" />

        <Preference
            android:key="SHORTCUT_ICONS_COLOR"
            android:title="@string/shortcuts_color" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/icon_packs">
        <ListPreference
            android:key="ICON_PACK_HOME"
            android:title="@string/select_home_icons" />

        <ListPreference
            android:key="ICON_PACK_APP_LIST"
            android:title="@string/select_app_list_icons" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/text_size_adjustments">
        <SeekBarPreference
            android:key="APP_SIZE_TEXT"
            android:title="@string/app_text_size"
            app:showSeekBarValue="true"
            app:min="10" android:max="100" />

        <SeekBarPreference
            android:key="DATE_SIZE_TEXT"
            android:title="@string/date_text_size"
            app:showSeekBarValue="true"
            app:min="10" android:max="120" />

        <SeekBarPreference
            android:key="CLOCK_SIZE_TEXT"
            android:title="@string/clock_text_size"
            app:showSeekBarValue="true"
            android:defaultValue="42"
            app:min="10" android:max="120" />

        <SeekBarPreference
            android:key="ALARM_SIZE_TEXT"
            android:title="@string/alarm_text_size"
            app:showSeekBarValue="true"
            app:min="10" android:max="120" />

        <SeekBarPreference
            android:key="BATTERY_SIZE_TEXT"
            android:title="@string/battery_text_size"
            app:showSeekBarValue="true"
            app:min="10" android:max="75" />
    </PreferenceCategory>

</PreferenceScreen>