<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/personalization">
        <ListPreference
            android:key="APP_THEME"
            android:title="@string/theme_mode"
            android:entries="@array/theme_mode_entries"
            android:entryValues="@array/theme_mode_values"
            android:defaultValue="System"
            app:useSimpleSummaryProvider="true" />


        <ListPreference
            android:key="LAUNCHER_FONT"
            android:title="@string/font_family"
            android:entries="@array/font_family_entries"
            android:entryValues="@array/font_family_values"
            android:defaultValue="System"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/search_and_app_list">
        <SwitchPreferenceCompat
            android:key="HIDE_SEARCH_VIEW"
            android:title="@string/hide_search_view"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="SHOW_FLOATING"
            android:title="@string/show_floating_button"
            android:defaultValue="true" />

        <ListPreference
            android:key="SEARCH_ENGINE"
            android:title="@string/search_engine"
            android:entries="@array/search_engine_entries"
            android:entryValues="@array/search_engine_values"
            android:defaultValue="Google"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="SHOW_AZSIDEBAR"
            android:title="@string/show_az_sidebar"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="AUTO_SHOW_KEYBOARD"
            android:title="@string/auto_show_keyboard"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="SEARCH_START"
            android:title="@string/search_from_start"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="ENABLE_FILTER_STRENGTH"
            android:title="@string/enable_filter_strength"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="FILTER_STRENGTH"
            android:title="@string/filter_strength"
            android:defaultValue="25"
            android:max="100"
            app:min="0"
            app:showSeekBarValue="true"
            android:dependency="ENABLE_FILTER_STRENGTH" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/home_management">
        <SwitchPreferenceCompat
            android:key="AUTO_OPEN_APP"
            android:title="@string/auto_open_apps"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="OPEN_APP_ON_ENTER"
            android:title="@string/open_apps_on_enter"
            android:summary="Open app on 'Enter' key press" 
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="HOME_LOCKED"
            android:title="@string/lock_home_apps"
            android:defaultValue="false" />

        <SeekBarPreference
            android:key="HOME_APPS_NUM"
            android:title="@string/number_of_home_apps"
            android:defaultValue="4"
            android:max="20"
            app:min="0"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="HOME_PAGES_NUM"
            android:title="@string/pages_on_home_screen"
            android:defaultValue="1"
            android:max="10"
            app:min="1"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="HOME_PAGES_PAGER"
            android:title="@string/enable_home_pager"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/info_tiles">
        <SwitchPreferenceCompat
            android:key="SHOW_DATE"
            android:title="@string/show_date"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="SHOW_CLOCK"
            android:title="@string/show_clock"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="SHOW_CLOCK_FORMAT"
            android:title="@string/show_clock_format"
            android:defaultValue="true"
            android:dependency="SHOW_CLOCK" />

        <SwitchPreferenceCompat
            android:key="SHOW_ALARM"
            android:title="@string/show_alarm"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="SHOW_DAILY_WORD"
            android:title="@string/show_daily_word"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="SHOW_BATTERY"
            android:title="@string/show_battery"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="SHOW_BATTERY_ICON"
            android:title="@string/show_battery_icon"
            android:defaultValue="true"
            android:dependency="SHOW_BATTERY" />

        <SwitchPreferenceCompat
            android:key="SHOW_WEATHER"
            android:title="@string/show_weather"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="GPS_LOCATION"
            android:title="@string/gps_location"
            android:defaultValue="true"
            android:dependency="SHOW_WEATHER" />

        <!-- Inverse dependency impossible in XML, handled in code or just show it but disable it if GPS is On? 
             Actually standard dependency disables when parent is false (or true depending on disableDependentsState).
             We want Manual Location enabled when GPS is FALSE.
             XML dependency attribute supports this? 
             Yes, android:dependency="GPS_LOCATION" checks the state.
             We can use android:disableDependentsState="true" on the parent (GPS_LOCATION)
             so that when it is TRUE, the dependent is DISABLED.
        -->
        
        <Preference
            android:key="pref_key_manual_location"
            android:title="@string/manual_location"
            android:dependency="GPS_LOCATION" />

        <ListPreference
            android:key="TEMP_UNIT"
            android:title="@string/temp_unit"
            android:entries="@array/temp_unit_entries"
            android:entryValues="@array/temp_unit_values"
            android:defaultValue="Celsius"
            app:useSimpleSummaryProvider="true"
            android:dependency="SHOW_WEATHER" />
    </PreferenceCategory>

</PreferenceScreen>
