<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:layout="@layout/settings_header"
        android:selectable="false" />

    <Preference
        android:key="pref_key_general"
        android:layout="@layout/preference_settings_item_top"
        android:title="@string/settings_general_title"
        android:summary="@string/settings_general_description"
        app:icon="@drawable/ic_general" />

    <Preference
        android:key="pref_key_widget"
        android:layout="@layout/preference_settings_item_middle"
        android:title="@string/settings_widget_title"
        android:summary="@string/settings_widget_description"
        app:icon="@drawable/ic_widget" />

    <Preference
        android:key="pref_key_home"
        android:layout="@layout/preference_settings_item_middle"
        android:title="@string/settings_home_title"
        android:summary="@string/settings_home_description"
        app:icon="@drawable/ic_home" />

    <Preference
        android:key="pref_key_drawer"
        android:layout="@layout/preference_settings_item_middle"
        android:title="@string/settings_drawer_title"
        android:summary="@string/settings_drawer_description"
        app:icon="@drawable/ic_drawer" />

    <Preference
        android:key="pref_key_about"
        android:layout="@layout/preference_settings_item_bottom"
        android:title="@string/about_settings_title"
        android:summary="@string/settings_about_description"
        app:icon="@drawable/ic_info" />

</PreferenceScreen>
